# moco_sdk

./: README.txt
c_api_examples/: CMakeLists.txt  c_api_example.c
cpp_api_examples/: CMakeLists.txt  buffer_example.cpp  manager_example.cpp  multi-dof_example.cpp  position_example.cpp  simple_send_receive_packet.cpp  spring_example.cpp
python/: moco-7.3.1.dev21-py3-none-any.whl  requirements.txt  setup.py
python/examples/: api_receive.py  api_send.py
python/moco/: __init__.py  _ffi_moco_packet.py  packet.py  params.py
simulink/: build_mex.sh  make_moco_library.m  motive_hrt.tmf  motive_hrt3.tmf
simulink/include/: moco_command_analog.h  moco_command_current.h  moco_command_full_state.h  moco_command_phase_lock.h  moco_command_position.h  moco_command_sin_position.h  moco_command_voltage.h  moco_init.h  moco_mode_analog.h  moco_mode_brake.h  moco_mode_current.h  moco_mode_full_state.h  moco_mode_open.h  moco_mode_phase_lock.h  moco_mode_position.h  moco_mode_sin_position.h  moco_mode_voltage.h  moco_receive_actuator_state.h  moco_receive_analog.h  moco_receive_analog_command.h  moco_receive_basic.h  moco_receive_command_packets_code.h  moco_receive_current_command.h  moco_receive_encoder.h  moco_receive_full_state_command.h  moco_receive_motor_detail.h  moco_receive_phase_lock_command.h  moco_receive_position_command.h  moco_receive_sin_position_command.h  moco_receive_spi_accelerometer.h  moco_receive_status_packets_code.h  moco_receive_timing.h  moco_receive_torque.h  moco_receive_voltage_command.h
simulink/src/: moco_command_analog.c  moco_command_current.c  (+30 more)
(+9 files in other folders)
